Fix user preference dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -65,59 +65,6 @@ time, mark, audio, video {
 
 /* General */
 
-/* Dark mode */
-@media (prefers-color-scheme: dark) {
-  :root:not(.light):not(.dark) {
-    --global-background: rgb(31, 31, 31);
-    --text-color: rgba(255, 255, 255, 0.726);
-
-    --calculator-background: rgb(48, 48, 48);
-    --calculator-overlay: none;
-
-    --calculator-button-color: rgba(255, 255, 255, 0.966);
-    --calculator-button-background-color: rgba(78, 78, 78, 0.548);
-    --calculator-button-active-background-color: rgba(78, 78, 78, 0.342);
-
-    --calculator-button-unique-color: var(--calculator-button-color);
-    --calculator-button-unique-background-color: #636363;
-
-    --ball-color: rgba(133, 133, 133, 0.966);
-    --checked-slider-color: rgba(255, 255, 255, 0.726);
-
-    --history-global-background-color: rgb(22, 22, 22);
-    --history-buttons-outline-color: rgba(206, 206, 206);
-
-    --history-svgs-fill: rgba(255, 255, 255, 0.726);
-  }
-  .input-bar,
-  .option-toggle,
-  .display-bar,
-  .calculation,
-  .trash-button span {
-    color: var(--text-color);
-  }
-
-  .history-button:focus-visible {
-    outline: var(--history-buttons-outline-width)
-      var(--history-buttons-outline-style) var(--history-buttons-outline-color);
-  }
-
-  input:focus-visible + .slider,
-  input:checked:focus-visible + .slider {
-    --slider-outline-color: var(--calculator-button-color);
-  }
-
-  .calculator-button:focus-visible,
-  .calculator-button:last-child:focus-visible {
-    outline: var(--calculator-button-outline-width)
-      var(--calculator-button-outline-style) var(--calculator-button-color);
-  }
-
-  .calculator-button:last-child:focus-visible {
-    outline-color: var(--calculator-button-unique-color);
-  }
-}
-
 :root.dark {
   --global-background: rgb(31, 31, 31);
   --text-color: rgba(255, 255, 255, 0.726);
@@ -1056,5 +1003,58 @@ svg {
 
   .calculator-button {
     font-size: clamp(20px, 2rem, 50px);
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root:not(.dark) {
+    --global-background: rgb(31, 31, 31);
+    --text-color: rgba(255, 255, 255, 0.726);
+
+    --calculator-background: rgb(48, 48, 48);
+    --calculator-overlay: none;
+
+    --calculator-button-color: rgba(255, 255, 255, 0.966);
+    --calculator-button-background-color: rgba(78, 78, 78, 0.548);
+    --calculator-button-active-background-color: rgba(78, 78, 78, 0.342);
+
+    --calculator-button-unique-color: var(--calculator-button-color);
+    --calculator-button-unique-background-color: #636363;
+    --calculator-button-unique-active-background-color: #636363e3;
+
+    --ball-color: rgba(133, 133, 133, 0.966);
+    --checked-slider-color: rgba(255, 255, 255, 0.726);
+
+    --history-global-background-color: rgb(22, 22, 22);
+    --history-buttons-outline-color: rgba(206, 206, 206);
+
+    --history-svgs-fill: rgba(255, 255, 255, 0.726);
+  }
+  .input-bar,
+  .option-toggle,
+  .display-bar,
+  .calculation,
+  .trash-button span {
+    color: var(--text-color);
+  }
+
+  .history-button:focus-visible {
+    outline: var(--history-buttons-outline-width)
+      var(--history-buttons-outline-style) var(--history-buttons-outline-color);
+  }
+
+  input:focus-visible + .slider,
+  input:checked:focus-visible + .slider {
+    --slider-outline-color: var(--calculator-button-color);
+  }
+
+  .calculator-button:focus-visible,
+  .calculator-button:last-child:focus-visible {
+    outline: var(--calculator-button-outline-width)
+      var(--calculator-button-outline-style) var(--calculator-button-color);
+  }
+
+  .calculator-button:last-child:focus-visible {
+    outline-color: var(--calculator-button-unique-color);
   }
 }
